--- a/src/template_index.org
+++ b/src/template_index.org
@@ -1,7 +1,7 @@
 * General information
 ** Output file
 #+BEGIN_EXAMPLE
-See [[info.org]] for details.
+See [info.org](../data/testing/info.org) for details.
 #+END_EXAMPLE
 ** Authors
 #+BEGIN_EXAMPLE
