--- a/README.org
+++ b/README.org
@@ -1,4 +1,6 @@
-* Inria Trace Archive
-This is the Inria Trace Archive.
+* Inria Parallel Program Trace Archive
+This is the Inria Parallel Program Trace Archive. This is joint project between the 
+Grenoble [[MESCAL][http://mescal.imag.fr/]] team and the Bordeaux 
+[[Hiepacs][https://team.inria.fr/hiepacs/]] and [[Storm/Runtime][http://runtime.bordeaux.inria.fr/]] teams.
 * Directory structure
 TODO
