--- a/guidelines.org
+++ b/guidelines.org
@@ -4,10 +4,6 @@ This archive is structured as follows:
 - Trace metadata are stored in this git repository, according to
   structure described in the [[README.org][README]].
 - Trace files are stored on [[https://zenodo.org/][Zenodo]], within the [[https://zenodo.org/collection/user-inria-traces][Inria Traces]] community.
-** Clone this repository
-#+begin_src 
-git clone git@github.com:inria-traces/trace.archive.git
-#+end_src
 ** Create an account on Zenodo
 - Go to [[https://zenodo.org/][Zenodo]]
 - Sign up
@@ -16,7 +12,7 @@ git clone git@github.com:inria-traces/trace.archive.git
   - If you choose to sign up using your GitHub account, you'll need to
     grant Zenodo the access to your GitHub and authorize the
     application.
-*** Creating a Zenodo personal token
+*** Create a Zenodo personal token
 To be able to use the scripts provided in this repository to interact
 with Zenodo, you need to get a personal token.
 - Go to your Applications, to [[https://zenodo.org/account/settings/applications/tokens/new/][create a new token]].
@@ -89,7 +85,7 @@ A default one has been created. PLEASE EDIT THE VALUES!
 #+END_EXAMPLE
 This means that you have to edit the specified configuration file,
 writing your name, your affiliation, and your personal zenodo token,
-obtained as [[*Creating%20a%20Zenodo%20personal%20token][described]].
+obtained as [[*Create%20a%20Zenodo%20personal%20token][described]].
 
 For all the script details, refer to the output of:
 #+begin_src 
