Adding analysis and discusions

--- a/data/qrm_starpu/e18/index.org
+++ b/data/qrm_starpu/e18/index.org
@@ -1,3 +1,5 @@
+#+STARTUP: overview indent inlineimages
+
 * General information
 ** Output file
 See [[file:info.org][info.org]] for details.
@@ -19,4 +21,42 @@ experimental data on this trace archive.
 * ZENODO content (written automatically)
 https://zenodo.org/record/16160/files/qrm_starpu-e18.tar.gz
 * Discussions
+** Analysis by Luka Stanisic <luka.stanisic@imag.fr>
+#+begin_src sh :results output :exports both
+LANG=C ; date
+#+end_src
+
+#+RESULTS:
+: Tue Mar 31 14:44:26 CEST 2015
+
+I have loaded the trace into FrameSoc using the following command to first convert it to pjdump format:
+#+begin_src sh :results output :exports both
+../../../src/starpu/pjdump_starpu_trace.sh -a -s paje.trace pjdump
+#+end_src
+
+Pjdump that I have on my machine is the following:
+#+begin_src sh :results output :exports both
+cd ~/Repository/pajeng
+git log -1
+cd -
+#+end_src
+
+#+RESULTS:
+: commit de07af3b58a6400f29345922bfdd9006db61ac95
+: Author: Lucas Schnorr <schnorr@inf.ufrgs.br>
+: Date:   Thu Feb 26 14:14:19 2015 -0300
+: 
+:     probabilistic simulator report (use -p filter in pj_dump to use it)
+: /home/stanisic/Repository/trace.archive/data/qrm_starpu/e18
+
+Once the trace have been loaded in FrameSoc I tried to find something interesting with Gantt chart or Ocelotl. However, this execution with qrm_starpu was very stable so these views didn't help. What I discovered using Pie chart is that the GEMQRT kernel takes almost 94% of the total time spent executing (when all idle time and overheads are ignored). Is this surprising? 
+ 
+Here is the corresponding [[file:Screenshot_e18.png][analysis]].
+
+*** Reply by Arnaud Legrand <arnaud.legrand@imag.fr>
+    Actually this is not surprising at all since indeed qrm_starpu spends most of its time running GEMQRT. 
+
+    However, what could be interesting to see is the total time spent idle or doing scheduling, in order to evaluate the efficiency of the StarPU.
+*** Reply by Luka
+    Well scheduler seems to be quite good, just check the [[file:Screenshot_e18_2.png][screenshot]]. The application spends 95% of the time running different kernels, which means that overhead of the runtime is minimal and that the scheduling was done very efficiently. I wonder how this would scale on larger NUMA machines, like [[https://plafrim.bordeaux.inria.fr/doku.php?id=plateforme:configurations:machine_sgi][manumanu]]?
 
