--- a/data/qrm_starpu/e18/index.org
+++ b/data/qrm_starpu/e18/index.org
@@ -87,7 +87,7 @@ The =atree.dot= file corresponds to the elimination tree:
 #+end_src
 
 #+RESULTS:
-[[file:./atree.jpg]
+[[file:./atree.jpg]]
 
 Each node of this tree is expanded into a DAG of tasks and the
 combination of these tasks is available in =dag.dot=. In total, this
