--- a/doc/guidelines.org
+++ b/doc/guidelines.org
@@ -2,7 +2,7 @@
 ** Archive architecture
 This archive is structured as follows:
 - Trace metadata are stored in this git repository, according to
-  structure described in the [[README.org][README]].
+  structure described in the [[../README.org][README]].
 - Trace files are stored on [[https://zenodo.org/][Zenodo]], within the [[https://zenodo.org/collection/user-inria-traces][Inria Traces]] community.
 ** Create an account on Zenodo
 - Go to [[https://zenodo.org/][Zenodo]]
@@ -54,7 +54,7 @@ git clone git@github.com:inria-traces/trace.archive.git
 #+end_src
 - Create a new script for running experiments in one of the =/src=
   subfolders, following the guidelines described in the corresponding
-  [[https://github.com/inria-traces/trace.archive/blob/master/guidelines.org#guidelines-for-writing-a-script-for-running-experiments][section]].
+  [[https://github.com/inria-traces/trace.archive/blob/master/doc/guidelines.org#guidelines-for-writing-a-script-for-running-experiments][section]].
 - Make sure to commit all your scripts.
 *** Generate the trace
 - Execute your script for running experiments.
@@ -86,7 +86,7 @@ A default one has been created. PLEASE EDIT THE VALUES!
 #+END_EXAMPLE
 This means that you have to edit the specified configuration file,
 writing your name, your affiliation, and your personal zenodo token,
-obtained as described in the corresponding [[https://github.com/inria-traces/trace.archive/blob/master/guidelines.org#create-a-zenodo-personal-token][section]].
+obtained as described in the corresponding [[https://github.com/inria-traces/trace.archive/blob/master/doc/guidelines.org#create-a-zenodo-personal-token][section]].
 
 For all the script details, refer to the output of:
 #+begin_src 
